syntax = "proto3";
import "google/protobuf/empty.proto";
package authservice;
option go_package = "./proto/pb";


service AuthService{
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Logout(google.protobuf.Empty) returns (LogoutResponse);

}

message RegisterRequest{
    string name = 1;
    string username = 2;
    string email = 3;
    string password = 4;
}

message RegisterResponse{
    int64 id = 1;
    string name = 2;
    string username = 3;
    string email = 4;
    string access_token = 5;
    string refresh_token = 6;
    
}

message LoginRequest{

    string username = 1;
    string password = 2;
}

message LoginResponse {
    int64 id =1;
    string message = 2;
    string username =3;
    string access_token = 4;
    string refresh_token = 5;
}

message LogoutRequest {

 
}

message LogoutResponse{
    string message = 1;

}